2006-08-12 Braden McDaniel  <braden@endoframe.com>

	Updated version, NEWS for 0.16.0.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* mozilla-plugin/configure.ac

2006-08-12 Braden McDaniel  <braden@endoframe.com>

	* README: 512 MB just isn't enough anymore.  Upped prerequisite to
	768 MB.

2006-08-11 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fixed test for antlr such that configure does not
	fail if antlr isn't found at all.

2006-08-10 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp: Include <direct.h> on
	Windows.

2006-08-10 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Fixed --disable-examples.  (Removed lingering
	reference to lookat.)

2006-08-10 Braden McDaniel  <braden@endoframe.com>

	* openvrml.spec.in: Package openvrml-config.h, openvrml-common.h,
	openvrml-gl-config.h, and openrml-gl-common.h.

2006-08-10 Braden McDaniel  <braden@endoframe.com>

	Fixes to generate API documentation properly.

	* doc/Makefile.am (DOXYGEN_OUTPUT_FILES): Avoid redundantly
	listing files with wild cards.
	(CUSTOMIZED_IMAGES): Added variable to list customized images for
	the doxygen-generated documentation.
	(EXTRA_DIST): Refer to DOXYGEN_OUTPUT_FILES and CUSTOMIZED_IMAGES
	rather than manual in order to avoid pulling in the CVS
	subdirectory.
	(.PHONY): List html-local
	(html-local): Run doxygen here.
	(install-data-local): Made installdirs-local a prerequisite.
	Removed html as a prerequisite; since html-local is now phony, we
	don't want to regenerate the documentation as part of install.
	(dist-hook): Removed.

2006-08-10 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/Makefile.am: Qualify antlr-generated sources
	with $(srcdir) to prevent touch from creating the files in the
	builddir.

2006-08-08 Braden McDaniel  <braden@endoframe.com>

	Updated libtool library version numbers.

	* src/libopenvrml/Makefile.am (LIBRARY_VERSION): Updated to 6:0:0.