@@ -18,6 +18,7 @@ BuildRequires:  fontconfig-devel >= 2.0
 BuildRequires:  freetype-devel >= 2.1.2
 BuildRequires:  mozilla-devel >= 1.6
 BuildRequires:  mesa-libGLU-devel
+BuildRequires:  libXmu-devel
 BuildRequires:  gtk2-devel
 Requires:       zlib >= 1.1.3
 Requires:       libpng >= 1.0.12
@@ -63,6 +64,7 @@ Group:          Applications/Internet
 License:        GPL
 Requires:       %{name}-gl = %{version}
 Requires:       gtk2
+Requires:       libXmu
 Requires:       mozilla >= 1.6
 %description mozilla-plugin
 VRML browser plug-in for Mozilla-based browsers.
@@ -119,6 +121,10 @@ VRML browser plug-in for Mozilla-based browsers.
 
 
 %changelog
+* Mon Aug 14 2006  Braden McDaniel  <braden@endoframe.com>
+- Added libXmu-devel to BuildRequires.
+- Made mozilla-plugin package Require libXmu.
+
 * Thu Aug 10 2006  Braden McDaniel  <braden@endoframe.com>
 - Use %{__make} instead of make.
 - Use %{__rm} instead of rm.
